# rust-base-encode

./: Cargo.toml  README.md
examples/: base36.rs
src/: lib.rs  utils.rs
