[package]
name = "base-encode"
version = "0.3.1"
authors = ["Janis Pritzkau <janispritzkau@gmail.com>"]
edition = "2018"

description = "Encode and decode data to any base."
readme = "README.md"

documentation = "https://docs.rs/base-encode"
repository = "https://github.com/janispritzkau/rust-base-encode"

license = "MIT"

[dev-dependencies]
rand = "0.7"
